--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -33,5 +33,11 @@
         <action
             android:id="@+id/action_DirectoryViewer_self"
             app:destination="@id/DirectoryViewer" />
+        <argument
+            android:name="DIRECTORY"
+            app:argType="string"/>
     </fragment>
+    <argument
+        android:name="DIRECTORY"
+        android:defaultValue="" />
 </navigation>
